ci(release): 增强发布工作流, 支持多种触发方式
- 重构 `release-proxy.yml` 以支持手动、推送标签和 `release:created` 事件触发。
- 引入 `prepare` 作业来统一解析发布标签，提高逻辑复用性和清晰度。
- 为 `softprops/action-gh-release` 步骤显式提供 `GITHUB_TOKEN`，以修复新版本下的认证问题。

--- a/.github/workflows/release-proxy.yml
+++ b/.github/workflows/release-proxy.yml
@@ -5,14 +5,52 @@ permissions:
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: "可选：要发布的 tag（例如 v0.1.0）；留空则使用 Cargo.toml 的 version → v{version}"
+        required: false
+        type: string
   push:
     tags:
       - "v*"
       - "augment-byok-proxy-v*"
+  release:
+    types:
+      - created
 
 jobs:
+  prepare:
+    name: Resolve tag
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.resolve.outputs.tag }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Resolve tag
+        id: resolve
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [[ "${GITHUB_EVENT_NAME}" == "release" ]]; then
+            tag="${{ github.event.release.tag_name }}"
+          elif [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            tag="${GITHUB_REF#refs/tags/}"
+          elif [[ "${GITHUB_EVENT_NAME}" == "workflow_dispatch" && -n "${{ inputs.tag }}" ]]; then
+            tag="${{ inputs.tag }}"
+          else
+            version="$(awk -F\\\" '/^version\\s*=\\s*\"/{print $2; exit}' Cargo.toml)"
+            tag="v${version}"
+          fi
+          echo "tag=${tag}" >> "$GITHUB_OUTPUT"
+          echo "Using tag: ${tag}"
+
   build:
     name: Build ${{ matrix.folder }}
+    needs: prepare
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -87,8 +125,9 @@ jobs:
 
   release:
     name: GitHub Release
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: build
+    needs:
+      - prepare
+      - build
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -100,11 +139,29 @@ jobs:
       - name: List artifacts
         run: ls -la dist
 
-      - name: Create release
+      - name: Create/Update release (tag push / manual)
+        if: github.event_name != 'release'
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: ${{ needs.prepare.outputs.tag }}
+          target_commitish: ${{ github.sha }}
           files: |
             dist/*.zip
             dist/*.tar.gz
             dist/*.sha256
           generate_release_notes: true
+
+      - name: Upload assets (existing release)
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ needs.prepare.outputs.tag }}
+          target_commitish: ${{ github.sha }}
+          files: |
+            dist/*.zip
+            dist/*.tar.gz
+            dist/*.sha256
