--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -341,6 +341,8 @@ jobs:
 
       - name: Create release
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.modify-extension.outputs.tag_name }}
           name: Augment VSCode Modified v${{ needs.modify-extension.outputs.version }}
